fix css overflow issues on houseplant case study and gif grid issues on bonsai case study

--- a/css/media-query-common.css
+++ b/css/media-query-common.css
@@ -28,7 +28,7 @@
     flex-direction: column;
     align-items: center;
     background-color: #fff;
-    width: 100vw;
+    width: 100%;
     padding: 0.5em 0 1em;
   }
   .click-show {
@@ -121,17 +121,16 @@
   .work-card-container {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(auto-fit, 1fr);
-    max-width: 100vw;
     width: 100%;
     min-width: 0;
     align-items: center;
     justify-content: center;
     margin-top: 3em;
+    box-sizing: border-box;
   }
   .work-card, .work-card-fullwidth, .work-card-halfheight {
     display: flex;
     flex-direction: column;
-    max-width: 100vw;
     width: auto;
     min-width: 0;
     height: auto;
@@ -143,17 +142,11 @@
   .work-card-halfheight>img {
     width: 100%;
     height: 50%;
-    max-width: 100vw;
   }
   .work-card-halfheight>.work-text-container {
     flex: 1 1 auto;
   }
-  .cover {
-    width: 100vw;
-    height: 40vh;
-  }
   .work-card>img, .fullwidth-grid-image {
-    max-width: 100vw;
     width: 100%;
     min-width: 0;
     height: 40vh;
@@ -175,7 +168,6 @@
     justify-content: space-between;
   }
   .two-column-container, .two-column-container-low-top {
-    max-width: 100vw;
     width: 100%;
     min-width: 0;
     grid-template-columns: 1fr;
@@ -211,7 +203,6 @@
     min-width: 0;
   }
   .case-card, .work-text-container, .case-flex-row-container, .case-flex-row {
-    max-width: 100vw;
     height: auto;
     width: 100%;
     min-width: 0;
@@ -221,12 +212,10 @@
   }
   .case-backimage {
     min-width: 0;
-    width: 100vw;
-    height: 90vh;
     object-fit: cover;
   }
   .work-cards-carousel {
-    width: 100vw;
+    width: 100%;
   }
   #prev, #next {
     display: none;
@@ -237,7 +226,7 @@
     justify-content: center;
     align-items: center;
     width: 90vw;
-    max-width: 100vw;
+    max-width: 100%;
     margin: 0 auto 6.25em auto;
   }
   .case-fullwidth-card {
@@ -266,7 +255,7 @@
     flex-direction: column;
     padding-left: 40px;
     height: 100%;
-    max-width: 100vw;
+    max-width: 100%;
     min-width: 0;
   }
   .hp-mobile>.title-and-roles>h5 {
@@ -337,16 +326,12 @@
     display: none;
   }
   .two-column-container {
-    max-width: 100vw;
+    max-width: 100%;
     min-width: 0;
     grid-template-columns: 1fr;
   }
   .persona-container {
     justify-content: center;
-  }
-  .case-backimage {
-    width: 100vw;
-    height: 90vh;
   }
   #prev, #next {
     margin: 0 1em;
@@ -404,14 +389,12 @@
 
 @media(min-width: 1020px) and (max-width: 1200px) {
   .two-column-container {
-    padding: 0 2vw 0 2vw;
-    max-width: 100vw;
     width: 96vw;
     grid-template-columns: 1fr 1fr;
     box-sizing: border-box;
   }
   .flex-center {
-    max-width: 100vw;
+    max-width: 100%;
   }
   .flex-center>img {
     max-width: 100%;
@@ -457,6 +440,13 @@
     right: 100%;
   }
 }
+
+/* @media (min-width: 1200px) {
+  .case-fullwidth-card, .quote-container {
+    width: 100vw;
+    overflow-x: hidden;
+  }
+} */
 
 @-ms-viewport {
   width: device-width;
